// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectDetailsVerificationList renders correctly with empty array 1`] = `
<div>
  <p
    class="chakra-text css-0"
  >
    noData
  </p>
</div>
`;

exports[`ProjectDetailsVerificationList renders correctly with full array 1`] = `
<div>
  <div
    class="css-0"
  >
    <p
      class="chakra-text css-0"
    >
      item1
    </p>
    <p
      class="chakra-text css-0"
    >
      item2
    </p>
    <p
      class="chakra-text css-0"
    >
      item3
    </p>
    <p
      class="chakra-text css-0"
    >
      item4
    </p>
    <button
      class="chakra-button css-4xx2wk"
      data-testid="verification-expand"
      type="button"
    >
      View More
    </button>
  </div>
</div>
`;

exports[`ProjectDetailsVerificationList renders correctly with full array and click 1`] = `
<div>
  <div
    class="css-0"
  >
    <p
      class="chakra-text css-0"
    >
      item1
    </p>
    <p
      class="chakra-text css-0"
    >
      item2
    </p>
    <p
      class="chakra-text css-0"
    >
      item3
    </p>
    <p
      class="chakra-text css-0"
    >
      item4
    </p>
    <p
      class="chakra-text css-0"
    >
      item5
    </p>
    <button
      class="chakra-button css-4xx2wk"
      data-testid="verification-expand"
      type="button"
    >
      View Less
    </button>
  </div>
</div>
`;

exports[`ProjectDetailsVerificationList renders correctly with full array and limit 1`] = `
<div>
  <div
    class="css-0"
  >
    <p
      class="chakra-text css-0"
    >
      item1
    </p>
    <p
      class="chakra-text css-0"
    >
      item2
    </p>
    <button
      class="chakra-button css-4xx2wk"
      data-testid="verification-expand"
      type="button"
    >
      View More
    </button>
  </div>
</div>
`;
